# nlp-c-LLM-AI-response

./: .env  CMakeLists.txt  README.md
include/: llm_client.hpp
src/: llm_client.cpp  main.cpp
